--- a/fabric/src/main/resources/ritchiesprojectilelib-fabric.mixins.json
+++ b/fabric/src/main/resources/ritchiesprojectilelib-fabric.mixins.json
@@ -1,7 +1,7 @@
 {
   "required": true,
   "minVersion": "0.8",
-  "package": "net.examplemod.mixin.forge",
+  "package": "rbasamoyai.ritchiesprojectilelib.mixin.fabric",
   "compatibilityLevel": "JAVA_17",
   "client": [
   ],
