--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -25,32 +25,12 @@ configurations {
 }
 
 repositories {
-    // mavens for Forge-exclusives
-    maven { url = "https://maven.theillusivec4.top/" } // Curios
-    maven { // Create Forge and Registrate Forge
-        url = "https://maven.tterrag.com/"
-        content {
-            includeGroup("com.tterrag.registrate")
-            includeGroup("com.simibubi.create")
-        }
-    }
 }
 
 dependencies {
     forge("net.minecraftforge:forge:${minecraft_version}-${forge_version}")
     common(project(path: ":common", configuration: "namedElements")) { transitive = false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
-
-    // Create and its dependencies
-    modImplementation("com.simibubi.create:create-${minecraft_version}:${create_forge_version}:slim") { transitive = false }
-    modImplementation("com.tterrag.registrate:Registrate:${registrate_forge_version}")
-    modImplementation("com.jozufozu.flywheel:flywheel-forge-${flywheel_forge_minecraft_version}:${flywheel_forge_version}")
-
-    // Development QOL
-    modLocalRuntime("mezz.jei:jei-${minecraft_version}:${jei_forge_version}")
-
-    // if you would like to add integration with JEI, uncomment this line.
-//    modCompileOnly("mezz.jei:jei-${minecraft_version}:${jei_forge_version}:api")
 }
 
 processResources {
@@ -58,8 +38,7 @@ processResources {
     Map<String, String> properties = Map.of(
             "version", version,
             "forge_version", forge_version.split("\\.")[0], // only specify major version of forge
-            "minecraft_version", minecraft_version,
-            "create_version", create_forge_version.split("-")[0] // cut off build number
+            "minecraft_version", minecraft_version
     )
     properties.forEach((k, v) -> inputs.property(k, v))
 
@@ -71,8 +50,8 @@ processResources {
 loom {
     forge {
         mixinConfig(
-                "examplemod-common.mixins.json",
-                "examplemod.mixins.json"
+                "${mod_id}-forge.mixins.json",
+                "${mod_id}.mixins.json"
         )
     }
 }
@@ -110,7 +89,7 @@ components.java {
 publishing {
     publications {
         mavenForge(MavenPublication) {
-            artifactId = rootProject.archives_base_name + "-" + project.name
+            artifactId = rootProject.mod_id + "-" + project.name
             from components.java
         }
     }
