--- a/forge/src/main/resources/ritchiesprojectilelib-forge.mixins.json
+++ b/forge/src/main/resources/ritchiesprojectilelib-forge.mixins.json
@@ -1,10 +1,9 @@
 {
   "required": true,
   "minVersion": "0.8",
-  "package": "net.examplemod.mixin",
+  "package": "net.ritchiesprojectilelib.mixin.forge",
   "compatibilityLevel": "JAVA_17",
   "client": [
-    "MixinTitleScreen"
   ],
   "mixins": [
   ],
