👷🔧 Rework build system and ci

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id "architectury-plugin" version "3.4-SNAPSHOT"
-    id "dev.architectury.loom" version "1.0-SNAPSHOT" apply false
-    id "io.github.juuxel.loom-vineflower" version "1.+" apply false
+    id "architectury-plugin" version "3.+"
+    id "dev.architectury.loom" version "1.+" apply false
+    id "io.github.juuxel.loom-vineflower" version "1.+" apply false // Vineflower
     id "io.github.p03w.machete" version "1.+" // automatic jar compressing on build
 }
 
@@ -9,9 +9,21 @@ architectury {
     minecraft = rootProject.minecraft_version
 }
 
+def getGitHash = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine "git", "rev-parse", "--short", "HEAD"
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
+
+boolean ci = System.getenv("CI") != null ? System.getenv("CI").toBoolean() : false
+
 subprojects {
     apply plugin: "dev.architectury.loom"
     apply plugin: "io.github.juuxel.loom-vineflower"
+    apply plugin: "maven-publish"
 
     loom {
         silentMojangMappingsLicense()
@@ -35,23 +47,50 @@ subprojects {
 
         // see each subproject for dependencies.
     }
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                artifactId = rootProject.archives_base_name + "-" + project.name + "-" + minecraft_version
+                version = mod_version + "+" + getGitHash()
+                from components.java
+            }
+        }
+        repositories {
+            maven {
+                name = "GitHubPackages"
+                url = "https://maven.pkg.github.com/wagers-of-industrial-warfare/multiloadertemplate"
+                credentials {
+                    username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                    password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+                }
+            }
+            maven {
+                name = "realRobotixMaven"
+                url = "https://maven.realrobotix.me/multiloadertemplate"
+                credentials(PasswordCredentials)
+            }
+        }
+    }
 }
 
 allprojects {
     apply plugin: "java"
     apply plugin: "architectury-plugin"
-    apply plugin: "maven-publish"
 
-    archivesBaseName = rootProject.mod_id
-    group = rootProject.maven_group
+    base {
+        archivesName.set(rootProject.archives_base_name)
+        group = rootProject.maven_group
+    }
 
-    String buildNumber = System.getenv("GITHUB_RUN_NUMBER")
-    version = "${mod_version}+${project.name}-${minecraft_version}" + (buildNumber != null ? "-${buildNumber}" : "")
+    // Formats the mod version to include the loader, Minecraft version, and build number (if present)
+    // example: 1.0.0+fabric-1.18.2-100
+
+    version = mod_version + "+" + getGitHash()
 
     repositories {
     }
 
-    tasks.withType(JavaCompile) {
+    tasks.withType(JavaCompile).configureEach {
         options.encoding = "UTF-8"
     }
 
@@ -61,6 +100,6 @@ allprojects {
 
     machete {
         // disable machete locally for faster builds
-        enabled = buildNumber != null
+        enabled = ci
     }
 }
