--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
-org.gradle.jvmargs = -Xmx2G
+org.gradle.jvmargs = -Xmx4G
+org.gradle.parallel = true
+org.gradle.caching=true
 
 # Mod Info
 mod_id = ritchiesprojectilelib
