--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Get branch name
         id: get_branch
@@ -37,63 +38,73 @@ jobs:
           java-version: 17
           distribution: temurin
 
-      - name: Grant execute permission for gradlew
+      - name: Validate Gradle Wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Grant execute permissions to gradlew
         run: chmod +x gradlew
 
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@9aa31f26bc8e536d1faf4b332bb8365350743a18
-
-      - name: Build jar
-        uses: gradle/gradle-build-action@v2.4.0
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
         with:
-          arguments: build
           gradle-home-cache-includes: |
             caches
             loom-cache
 
-      - name: Publish to GitHub Packages
-        if: github.event_name == 'push' && github.repository_id == '683712229'
-        continue-on-error: true
-        uses: gradle/gradle-build-action@v2.4.0
+      - name: Build
+        uses: gradle/gradle-build-action@v2
         with:
-          arguments: publishMavenJavaPublicationToGitHubPackagesRepository
+          arguments: build
+
+      - name: Publish to GitHub Packages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        if: github.event_name == 'push' && env.GITHUB_TOKEN != ''
+        continue-on-error: true
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: publishMavenJavaPublicationToGitHubPackagesRepository
 
       - name: Publish to realRobotix Maven
-        if: github.event_name == 'push' && github.repository_id == '683712229'
-        uses: gradle/gradle-build-action@v2.4.0
+        env:
+          MAVEN_USER: ${{ secrets.MAVEN_USER }}
+          MAVEN_ACCESS_TOKEN: ${{ secrets.MAVEN_ACCESS_TOKEN }}
+        if: github.event_name == 'push' && env.MAVEN_USER != '' && env.MAVEN_ACCESS_TOKEN != ''
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: |
             publishMavenJavaPublicationToRealRobotixMavenRepository
             -PrealRobotixMavenUsername=${{ secrets.MAVEN_USER }}
             -PrealRobotixMavenPassword=${{ secrets.MAVEN_ACCESS_TOKEN }}
 
-      - name: Send building message to discord
-        if: github.event_name == 'push' && github.repository_id == '683712229'
-        uses: realRobotix/action-discord-notifier@release-master
-        with:
-          webhook: ${{ secrets.DISCORD_WEBHOOK }}
-          message-title: Building mod from branch ${{ steps.get_branch.outputs.branch }}
-
       - name: Find jars
         id: find_jars
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "jars<<$EOF" >> $GITHUB_OUTPUT
-          find . -regextype posix-extended -regex "\.\/($(tr "," "|" <<< ${{ steps.read_properties.outputs.enabled_platforms }}))\/build\/libs\/${{ steps.read_properties.outputs.archives_base_name }}-($(tr "," "|" <<< ${{ steps.read_properties.outputs.enabled_platforms }}))-${{ steps.read_properties.outputs.minecraft_version }}-${{ steps.read_properties.outputs.mod_version }}-nightly-${{ steps.get_hash.outputs.sha_short }}.jar" >> $GITHUB_OUTPUT
+          find . -regextype posix-extended -regex "\.\/($(tr "," "|" <<< ${{ steps.read_properties.outputs.enabled_platforms }}))\/build\/libs\/${{ steps.read_properties.outputs.archives_base_name }}-${{ steps.read_properties.outputs.mod_version }}-${{ steps.get_hash.outputs.sha_short }}\+${{ steps.read_properties.outputs.minecraft_version }}-($(tr "," "|" <<< ${{ steps.read_properties.outputs.enabled_platforms }})).jar" >> $GITHUB_OUTPUT
           echo "$EOF" >> $GITHUB_OUTPUT
 
-      - name: Send built file to discord
-        if: github.event_name == 'push' && github.repository_id == '683712229'
-        uses: sinshutu/upload-to-discord@master
+      - name: Send building message to discord
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        if: github.event_name == 'push' && env.DISCORD_WEBHOOK != ''
+        uses: realRobotix/action-discord-notifier@release-master
         with:
-          args: ${{ steps.find_jars.outputs.jars }}
+          webhook: ${{ secrets.DISCORD_WEBHOOK }}
+          message-title: Building mod from branch ${{ steps.get_branch.outputs.branch }}
+
+      - name: Send built file to discord
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+        if: github.event_name == 'push' && env.DISCORD_WEBHOOK != ''
+        run: |
+          for f in $'${{ steps.find_jars.outputs.jars }}'; do
+              curl -F "file=@\"$f\";filename=\"$(echo ${f##*/} | sed 's/+/-/g')\"" $DISCORD_WEBHOOK
+          done
 
       - name: Archive Artifacts
         uses: actions/upload-artifact@v3.1.2
         with:
-          name: ${{ steps.read_properties.outputs.archives_base_name }}-${{ steps.read_properties.outputs.minecraft_version }}-${{ steps.read_properties.outputs.mod_version }}-nightly-${{ steps.get_hash.outputs.sha_short }}
+          name: ${{ steps.read_properties.outputs.archives_base_name }}-${{ steps.read_properties.outputs.mod_version }}-${{ steps.get_hash.outputs.sha_short }}+${{ steps.read_properties.outputs.minecraft_version }}
           path: ${{ steps.find_jars.outputs.jars }}
