--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     common(project(path: ":common", configuration: "namedElements")) { transitive = false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive = false }
     modImplementation("net.fabricmc.fabric-api:fabric-api:${fabric_api_version}")
+    modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:${devauth_fabric_version}")
 
     modApi(include("io.github.fabricators_of_create:Porting-Lib:${porting_lib_version}+${minecraft_version}"))
 }
