--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     forge("net.minecraftforge:forge:${minecraft_version}-${forge_version}")
     common(project(path: ":common", configuration: "namedElements")) { transitive = false }
     shadowCommon(project(path: ":common", configuration: "transformProductionForge")) { transitive = false }
+    modRuntimeOnly("me.djtheredstoner:DevAuth-forge-latest:${devauth_forge_version}")
 }
 
 processResources {
