--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,10 @@ parchment_version = 2022.11.06
 # Fabric
 fabric_loader_version = 0.14.11
 fabric_api_version = 0.67.0+1.18.2
+devauth_fabric_version = 1.1.2
 
 porting_lib_version=1.2.869-beta
 
 # Forge
 forge_version = 40.2.10
+devauth_forge_version = 1.1.2
