--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         id: read_properties
         with:
           path: gradle.properties
-          properties: minecraft_version enabled_platforms mod_version archives_base_name
+          properties: minecraft_version enabled_platforms mod_version mod_id
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -82,7 +82,7 @@ jobs:
         run: |
           EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
           echo "jars<<$EOF" >> $GITHUB_OUTPUT
-          find . -regextype posix-extended -regex "\.\/($(tr "," "|" <<< ${{ steps.read_properties.outputs.enabled_platforms }}))\/build\/libs\/${{ steps.read_properties.outputs.archives_base_name }}-${{ steps.read_properties.outputs.mod_version }}-${{ steps.get_hash.outputs.sha_short }}\+${{ steps.read_properties.outputs.minecraft_version }}-($(tr "," "|" <<< ${{ steps.read_properties.outputs.enabled_platforms }})).jar" >> $GITHUB_OUTPUT
+          find . -regextype posix-extended -regex "\.\/($(tr "," "|" <<< ${{ steps.read_properties.outputs.enabled_platforms }}))\/build\/libs\/${{ steps.read_properties.outputs.mod_id }}-${{ steps.read_properties.outputs.mod_version }}-${{ steps.get_hash.outputs.sha_short }}\+${{ steps.read_properties.outputs.minecraft_version }}-($(tr "," "|" <<< ${{ steps.read_properties.outputs.enabled_platforms }})).jar" >> $GITHUB_OUTPUT
           echo "$EOF" >> $GITHUB_OUTPUT
 
       - name: Send building message to discord
@@ -106,5 +106,5 @@ jobs:
       - name: Archive Artifacts
         uses: actions/upload-artifact@v3.1.2
         with:
-          name: ${{ steps.read_properties.outputs.archives_base_name }}-${{ steps.read_properties.outputs.mod_version }}-${{ steps.get_hash.outputs.sha_short }}+${{ steps.read_properties.outputs.minecraft_version }}
+          name: ${{ steps.read_properties.outputs.mod_id }}-${{ steps.read_properties.outputs.mod_version }}-${{ steps.get_hash.outputs.sha_short }}+${{ steps.read_properties.outputs.minecraft_version }}
           path: ${{ steps.find_jars.outputs.jars }}
