--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ fabric_api_version = 0.67.0+1.18.2
 devauth_fabric_version = 1.1.2
 
 porting_lib_version=1.2.869-beta
+config_api_id = 3943250
 
 # Forge
 forge_version = 40.2.10
