--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,8 +7,11 @@ loom {
 }
 
 repositories {
+    maven { url = "https://cursemaven.com" } // Forge Config API Port
 }
 
 dependencies {
     modImplementation("net.fabricmc:fabric-loader:${fabric_loader_version}")
+
+    modApi("curse.maven:forge-config-api-port-fabric-547434:${config_api_id}")
 }
