--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,7 @@ devauth_fabric_version = 1.1.2
 
 porting_lib_version=1.2.869-beta
 config_api_id = 3943250
+night_config_version = 3.6.3
 
 # Forge
 forge_version = 40.2.10
