--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     modImplementation("net.fabricmc.fabric-api:fabric-api:${fabric_api_version}")
     modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:${devauth_fabric_version}")
 
-    modApi(include("io.github.fabricators_of_create.Porting-Lib:Porting-Lib:${porting_lib_version}+${minecraft_version}"))
+    modApi(include("io.github.fabricators_of_create.Porting-Lib:Porting-Lib:${porting_lib_version}"))
     modApi(include("curse.maven:forge-config-api-port-fabric-547434:${config_api_id}"))
     modApi(include("com.electronwill.night-config:core:${night_config_version}"))
     modApi(include("com.electronwill.night-config:toml:${night_config_version}"))
