--- a/gradle.properties
+++ b/gradle.properties
@@ -7,21 +7,21 @@ mod_id = ritchiesprojectilelib
 mod_version = 1.0.0
 maven_group = com.rbasamoyai
 
-minecraft_version = 1.19.4
+minecraft_version = 1.20.1
 enabled_platforms = fabric,forge
 
-qm_version = 10
-parchment_version = 2023.06.26
+qm_version = 23
+parchment_version = 2023.09.03
 
 # Fabric
 fabric_loader_version = 0.14.11
-fabric_api_version = 0.87.0+1.19.4
+fabric_api_version = 0.89.3+1.20.1
 devauth_fabric_version = 1.1.2
 
-porting_lib_version=2.1.995
-config_api_id = 4451343
+porting_lib_version=2.1.1127+1.20
+config_api_id = 4583000
 night_config_version = 3.6.3
 
 # Forge
-forge_version = 45.2.2
+forge_version = 47.2.1
 devauth_forge_version = 1.1.2
