--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -19,6 +19,14 @@ configurations {
     developmentFabric.extendsFrom common
 }
 
+configurations.configureEach {
+    resolutionStrategy.eachDependency {
+        if (requested.module.name == "fabric-loader") {
+            useVersion(fabric_loader_version)
+        }
+    }
+}
+
 repositories {
     maven { url = "https://mvn.devos.one/snapshots/" } // Porting Lib
     maven { url = "https://jitpack.io/" } // Mixin Extras, Fabric ASM
