🐛 Chunkloading actually works (promise!)

--- a/common/src/main/resources/ritchiesprojectilelib.mixins.json
+++ b/common/src/main/resources/ritchiesprojectilelib.mixins.json
@@ -6,7 +6,8 @@
   "client": [
   ],
   "mixins": [
-    "ServerEntityMixin"
+    "ServerEntityMixin",
+    "ServerLevelMixin"
   ],
   "injectors": {
     "defaultRequire": 1
