🐛 Fixed version requirements for RPL Fabric

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,7 @@ fabric_api_version = 0.76.1+1.19.2
 devauth_fabric_version = 1.1.2
 
 porting_lib_version=2.1.1096
+porting_lib_tags_version=3.0
 config_api_id = 4401535
 night_config_version = 3.6.3
 
