--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "architectury-plugin" version "3.+"
-    id "dev.architectury.loom" version "1.+" apply false
+    id "dev.architectury.loom" version "1.3+" apply false
     id "io.github.juuxel.loom-vineflower" version "1.+" apply false // Vineflower
     id "io.github.p03w.machete" version "1.+" // automatic jar compressing on build
 }
